--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0"
+    "express": "^4.18.0",
+    "md5": "^2.3.0",
+    "redis": "^4.1.0"
   }
 }
