--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.18.0",
+    "fs": "^0.0.1-security",
+    "https": "^1.0.0",
     "md5": "^2.3.0",
     "redis": "^4.1.0"
   }
